rework button/input styling for better consistency
buttons and inputs are now the same height in all contexts so special styles for window footers aren't needed, and button classes now appear the same on <button>s (and submit/button <input>s) as on <a>s

--- a/extension/data/styles/toolbox.css
+++ b/extension/data/styles/toolbox.css
@@ -155,8 +155,9 @@ html body.mod-toolbox-rd .tb-icons-align-middle {
 body.mod-toolbox-rd.mod-toolbox-extra .tb-input {
     border: solid 1px #c7d6e7;
     font-size: 1em;
-    padding: 5px;
-    line-height: 1.4;
+    padding: 5px 6px;
+    height: 14px;
+    line-height: 14px;
     background-color: #fff;
     color: #000;
     color-scheme: none;
@@ -1361,12 +1362,12 @@ body.mod-toolbox-rd .tb-action-button.tb-button-hidden {
 
 body.mod-toolbox-rd .tb-action-button {
     display: inline-block;
-    height: 25px !important;
+    height: 14px !important;
     vertical-align: bottom !important;
-    padding: 2px 6px 3px 6px !important;
+    padding: 5px 6px 4px 5px !important;
     font-family: verdana,arial,helvetica,sans-serif !important;
     font-size: 12px !important;
-    line-height: 12px !important;
+    line-height: 14px !important;
     text-shadow: none !important;
     text-decoration: none !important;
     text-align: left !important;
@@ -1383,7 +1384,7 @@ body.mod-toolbox-rd .tb-action-button {
     border-color: #72869A !important;
     border-style: solid !important;
     box-shadow: none !important;
-    box-sizing: border-box !important;
+    box-sizing: content-box !important;
     color: #17324E !important;
     transition: all 0.15s ease-in-out !important;
     outline: none !important;
@@ -1392,7 +1393,7 @@ body.mod-toolbox-rd .tb-action-button {
 body.mod-toolbox-rd .tb-action-button:active {
     border-width: 1px !important;
     border-color: #9FBAD6 !important;
-    padding: 2px 6px 3px 6px !important;
+    padding: 5px 6px !important;
     box-shadow: none !important;
     outline: none !important;
 }
@@ -1401,40 +1402,27 @@ body.mod-toolbox-rd .tb-action-button:active {
     background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 2 1" width="10" height="5"><polygon points="0,0 1,1 2,0" fill="%2372869A"/></svg>');
     background-repeat: no-repeat;
     background-position: right 5px center;
-    -moz-appearance:none; /* Firefox */
-    -webkit-appearance:none; /* Safari and Chrome */
-    appearance:none;
-    padding: 1px 20px 2px 6px !important;
+    -moz-appearance: none; /* Firefox */
+    -webkit-appearance: none; /* Safari and Chrome */
+    appearance: none;
 }
-
-
+.mod-toolbox-rd select.tb-action-button,
 .mod-toolbox-rd select.tb-action-button:active {
-    border-width: 1px 1px 2px 2px !important;
-    padding: 1px 20px 2px 6px !important;
+    padding-right: 20px !important;
 }
 
 /* inline action buttons */
 
 .mod-toolbox-rd .tb-action-button.inline-button {
-    font-size: 11px !important;
-    line-height: 11px !important;
-    height: 20px !important;
+    padding: 3px 3px 2px 2px !important;
 }
-.mod-toolbox-rd select.tb-action-button.inline-button {
-    padding: 1px 15px 1px 5px !important;
-    font-size: 11px !important;
-    line-height: 11px !important;
-    height: 20px !important;
-}
-
 .mod-toolbox-rd .tb-action-button.inline-button:active {
-    padding: 2px 6px 4px 7px !important;
+    padding: 3px !important;
 }
-
+.mod-toolbox-rd select.tb-action-button.inline-button,
 .mod-toolbox-rd select.tb-action-button.inline-button:active {
-    border-width: 1px 1px 2px 2px !important;
-    padding: 1px 15px 1px 5px !important;
-
+    padding-right: 15px !important;
+    background-position-x: right 3px;
 }
 
 .mod-toolbox-rd button.save-mod.tb-action-button,
