Add prerelease indicator to modbar for dev/beta builds

--- a/extension/data/styles/modbar.css
+++ b/extension/data/styles/modbar.css
@@ -46,7 +46,8 @@
 .mod-toolbox-rd #tb-bottombar-hidden .tb-bottombar-unhide,
 .mod-toolbox-rd #tb-bottombar .tb-toolbar-new-settings,
 .mod-toolbox-rd #tb-toggle-console,
-.mod-toolbox-rd #tb-reload-link {
+.mod-toolbox-rd #tb-reload-link,
+.mod-toolbox-rd #tb-prerelease-link {
     flex: 0 0 auto;
     padding: 0 3px;
 }
@@ -162,6 +163,21 @@
     order: 3;
     display: inline-block;
     margin-right: 5px;
+}
+.mod-toolbox-rd #tb-prerelease-link {
+    display: flex;
+    background: none;
+    border: none;
+    appearance: none;
+    height: 30px;
+    margin: 0 5px 0 0;
+    padding: 0 3px;
+    gap: 3px;
+    align-items: center;
+    color: red !important;
+}
+.mod-toolbox-rd #tb-prerelease-link > * {
+    color: inherit !important;
 }
 
 /* My subreddits list */
