--- a/extension/data/styles/modbar.css
+++ b/extension/data/styles/modbar.css
@@ -174,6 +174,11 @@
     gap: 3px;
     align-items: center;
     color: red !important;
+    cursor: pointer;
+    /* Naut stuff */
+    text-transform: none;
+    font-weight: normal;
+    box-shadow: none;
 }
 .mod-toolbox-rd #tb-prerelease-link > * {
     color: inherit !important;
