note contents do not need an entire runway to land on

--- a/extension/data/modules/modnotes.module.css
+++ b/extension/data/modules/modnotes.module.css
@@ -16,6 +16,11 @@
 	text-decoration: none;
 }
 
+/* note text */
+.noteTable blockquote {
+	margin: 0;
+}
+
 .actionSummary {
 	font-style: italic;
 	opacity: 0.5;
